test/should_pass/var.erl
-module(var).

-export([id/1]).

-spec id(A) -> A.
id(A) -> A.
